--- a/OracleJETApplication-V-2/views/header.html
+++ b/OracleJETApplication-V-2/views/header.html
@@ -153,6 +153,8 @@
             <h1 data-bind="text: $root.pageTitle" class="pageTitle"></h1>
         </div>
     </div>
+<!--    Doesnt seem to work-->
+<!--
     <div data-bind="if: $root.router.stateId() == 'profile'">
         <div class="oj-flex" data-bind="css: $root.router.stateId() + 'TitleWrap', if:$root.router.stateId() == 'profile'">
             <div id="topDrawer" class="oj-offcanvas-top" data-bind="ojModule: {
@@ -161,6 +163,7 @@
             </div>
         </div>
     </div>
+-->
 
 </script>
 <!-- oj-row -->
